# pdfstrip

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
pdfstrip/: cli.py  core.py  output.py
tests/: conftest.py  test_cli.py  test_core.py
