[project]
name = "pdfstrip"
version = "0.1.0"
description = "Remove passwords from PDF files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pikepdf>=9",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
pdfstrip = "pdfstrip.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
]
